--- a/.github/workflows/புதியவெளியீடு.yml
+++ b/.github/workflows/புதியவெளியீடு.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: புதியது எடு
-      uses: actions/checkout@master
+      uses: Nizhal/checkout@master
 
     - name: நிறுவு கட்டு
       uses: montudor/action-zip@v1
