--- a/.github/workflows/புதியவெளியீடு.yml
+++ b/.github/workflows/புதியவெளியீடு.yml
@@ -8,10 +8,10 @@ jobs:
       uses: Nizhal/checkout@master
 
     - name: நிறுவு கட்டு
-      uses: montudor/action-zip@v1
+      uses: Nizhal/action-zip@v1
 
     - name: கட்டு
-      run: zip ஃஎண்.zip ./* -r
+      run: zip -qq ஃஎண்.zip ./* -r
       working-directory: .
 
 
