--- a/.github/workflows/புதியவெளியீடு.yml
+++ b/.github/workflows/புதியவெளியீடு.yml
@@ -5,10 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: புதியது எடு
-      uses: Nizhal/checkout
+      uses: Nizhal/checkout@master
 
     - name: நிறுவு கட்டு
-      uses: Nizhal/action-zip
+      uses: Nizhal/action-zip@v1
 
     - name: கட்டு
       run: zip -qq ஃஎண்.zip ./* -r
