--- a/.github/workflows/புதியவெளியீடு.yml
+++ b/.github/workflows/புதியவெளியீடு.yml
@@ -24,7 +24,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: வெளியீடு
-      uses: ncipollo/release-action@v1
+      uses: Nizhal/release-action@v1
       with:
         artifacts: "ஃஎண்.zip"
         tag: current
