--- a/.github/workflows/புதியவெளியீடு.yml
+++ b/.github/workflows/புதியவெளியீடு.yml
@@ -11,7 +11,7 @@ jobs:
       uses: Nizhal/action-zip@v1
 
     - name: கட்டு
-      run: zip -qq -r ஃஎண்.zip ./*
+      run: zip -r ஃஎண்.zip ./*
 
 
     - name: நீக்கு
