--- a/.github/workflows/புதியவெளியீடு.yml
+++ b/.github/workflows/புதியவெளியீடு.yml
@@ -24,6 +24,8 @@ jobs:
       with:
         artifacts: "ஃஎண்.zip"
         commit: main
+        allowUpdates: true
+        draft: false
         tag: current
         name: புதியவெளியீடு
         body: புதிய மாற்றங்கள் அனைத்து அடங்கும்
