--- a/.github/workflows/புதியவெளியீடு.yml
+++ b/.github/workflows/புதியவெளியீடு.yml
@@ -18,6 +18,7 @@ jobs:
       uses: Nizhal/release-action@v1
       with:
         artifacts: "App.zip"
+        allowUpdates: true
         commit: main
         draft: false
         tag: current
