--- a/.github/workflows/புதியவெளியீடு.yml
+++ b/.github/workflows/புதியவெளியீடு.yml
@@ -3,8 +3,6 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-        contents:write
     steps:
     - name: புதியது எடு
       uses: Nizhal/checkout@master
@@ -13,7 +11,7 @@ jobs:
       uses: Nizhal/action-zip@v1
 
     - name: கட்டு
-      run: zip -r -q ஃஎண்.zip ./*
+      run: zip -rq ஃஎண்.zip ./*
       working-directory: .
 
 
