--- a/.github/workflows/புதியவெளியீடு.yml
+++ b/.github/workflows/புதியவெளியீடு.yml
@@ -1,4 +1,4 @@
-# இது செயல்களைத் தொடங்க உங்களுக்கு உதவும் அடிப்படைப் பணிப்பாய்வு
+# இது அடிப்படைப் பணிப்பாய்வு
 name: புதியவெளியீடு
 
 # பணிப்பாய்வு எப்போது இயங்கும் என்பதைக் கட்டுப்படுத்துகிறது
@@ -12,7 +12,7 @@ on:
   # செயல்கள் தாவலில் இருந்து இந்த பணிப்பாய்வுகளை கைமுறையாக இயக்க உங்களை அனுமதிக்கிறது
   workflow_dispatch:
 
-# ஒரு பணிப்பாய்வு என்பது வரிசையாக அல்லது இணையாக இயங்கக்கூடிய ஒன்று அல்லது அதற்கு மேற்பட்ட வேலைகளால் உருவாக்கப்பட்டது
+# ஒரு பணிப்பாய்வு வரிசையாக அல்லது இணையாக இயங்கக்கூடிய ஒன்று அல்லது அதற்கு மேற்பட்ட வேலைகளால் உருவாக்கப்பட்டது
 jobs:
   # இந்த பணிப்பாய்வு "build" என்று அழைக்கப்படும் ஒரு வேலையைக் கொண்டுள்ளது
   build:
@@ -21,16 +21,15 @@ jobs:
 
     # படிகள் வேலையின் ஒரு பகுதியாக செயல்படுத்தப்படும் பணிகளின் வரிசையைக் குறிக்கின்றன
     steps:
+    # $GITHUB_WORKSPACE இன் கீழ் உங்கள் களஞ்சியத்தை செக்-அவுட் செய்கிறீர்கள், அதனால் உங்கள் வேலை அதை அணுக முடியும்
     - name: எடு
-      # $GITHUB_WORKSPACE இன் கீழ் உங்கள் களஞ்சியத்தை செக்-அவுட் செய்கிறீர்கள், அதனால் உங்கள் வேலை அதை அணுக முடியும்
       uses: Nizhal/checkout@master
 
     - name: நிறுவு
       uses: Nizhal/action-zip@v1
 
-
+    # ரன்னர் ஷெல்லைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
     - name: கட்டு
-      # ரன்னர் ஷெல்லைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
       run: zip -qq App.zip ./*
       working-directory: .
 
@@ -45,9 +44,8 @@ jobs:
         name: புதியவெளியீடு
         body: புதிய மாற்றங்கள் அனைத்து அடங்கும்
 
-
-      # ரன்னர் ஷெல்லைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
-      - name: பல வரி ஸ்கிரிப்டை
-        run: |
-          echo வெற்றிகரமாக கட்டப்பட்டது,
-          echo வெளியீட்டைப் பார்க்கவும்.
+    # ரன்னர் ஷெல்லைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
+    - name: பல வரி ஸ்கிரிப்டை
+      run: |
+         echo வெற்றிகரமாக கட்டப்பட்டது,
+         echo வெளியீட்டைப் பார்க்கவும்.
