--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -1,4 +1,4 @@
-# இது அடிப்படைப் பணிப்பாய்வு
+﻿# இது அடிப்படைப் பணிப்பாய்வு
 name: புதியவெளியீடு
 
 # பணிப்பாய்வு எப்போது இயங்கும் என்பதைக் கட்டுப்படுத்துகிறது
@@ -47,5 +47,5 @@ jobs:
     # ரன்னர் ஷெல்லைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
     - name: பல வரி ஸ்கிரிப்டை
       run: |
-         echo வெற்றிகரமாக கட்டப்பட்டது,
-         echo வெளியீட்டைப் பார்க்கவும்.
+         echo $LANG 
+         echo வெற்றிகரமாக கட்டப்பட்டது வெளியீட்டைப் பார்க்கவும்.
