--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -30,13 +30,13 @@ jobs:
 
     # ரன்னர் ஷெல்லைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
     - name: கட்டு
-      run: zip -qq App.zip ./*
+      run: zip -qq ஃஎண்.zip ./*
       working-directory: .
 
     - name: வெளியீடு
       uses: Nizhal/release-action@v1
       with:
-        artifacts: "App.zip"
+        artifacts: "ஃஎண்.zip"
         allowUpdates: true
         commit: main
         draft: false
