--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -30,7 +30,7 @@ jobs:
 
     # ரன்னர் ஷெல்லைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
     - name: கட்டு
-      run: zip -qq ஃஎண்.zip ./*
+      run: "zip -qq ஃஎண்.zip ./*"
       working-directory: .
 
     - name: வெளியீடு
@@ -45,7 +45,7 @@ jobs:
         body: புதிய மாற்றங்கள் அனைத்து அடங்கும்
 
     # ரன்னர் ஷெல்லைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
-    - name: பல வரி ஸ்கிரிப்டை
+    - name: பல வரி படிவம்
       run: |
          echo $LANG 
          echo வெற்றிகரமாக கட்டப்பட்டது வெளியீட்டைப் பார்க்கவும்.
