--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -37,7 +37,7 @@ jobs:
       run: echo $LANG
 
     - name: வெளியீடு
-      uses: Nizhal/release-action@v1
+      uses: Nizhal/release-action@v1.12.0
       with:
         artifacts: "ஃஎண்.zip"
         allowUpdates: true
@@ -46,7 +46,7 @@ jobs:
         tag: current
         name: புதியவெளியீடு
         body: புதிய மாற்றங்கள் அனைத்து அடங்கும்
-
+        token: ${{ secrets.GITHUB_TOKEN }}
     # ரன்னர் ஷெல்லைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
     - name: பல வரி படிவம்
       run: |
