--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -26,9 +26,11 @@ jobs:
       uses: Nizhal/checkout@v3
 
     - name: கட்டு
-      uses: edgarrc/action-7z@v1
+      uses: thedoctor0/zip-release@0.7.1
       with:
-        args: 7z a -t7z -mx=9 ஃஎண்.7z ./* 
+        type: 'zip'
+        filename: 'ஃஎண்.zip'
+        exclusions: '*.git*'
         
     # ரன்னர் ஓட்டைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
     - name: பதிப்புமொழி
@@ -37,7 +39,7 @@ jobs:
     - name: வெளியீடு
       uses: Nizhal/release-action@v1.12.0
       with:
-        artifacts: "ஃஎண்.7z"
+        artifacts: "ஃஎண்.zip"
         allowUpdates: true
         commit: main
         draft: false
