--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -34,7 +34,7 @@ jobs:
         
     # ரன்னர் ஓட்டைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
     - name: பதிப்புமொழி
-      run: echo $LANG
+      run: ls
 
     - name: வெளியீடு
       uses: Nizhal/release-action@v1.12.0
@@ -50,5 +50,5 @@ jobs:
     # ரன்னர் ஷெல்லைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
     - name: பல வரி படிவம்
       run: |
-         echo வெற்றிகரமாக கட்டப்பட்டது 
+         echo $LANG வெற்றிகரமாக கட்டப்பட்டது 
          echo வெளியீட்டைப் பார்க்கவும்.
