--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -33,13 +33,13 @@ jobs:
         exclusions: '*.git*'
         
     # ரன்னர் ஓட்டைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
-    - name: பதிப்புமொழி
+    - name: பட்டியல்
       run: ls
 
     - name: வெளியீடு
-      uses: Nizhal/release-action@v1.12.0
+      uses: Nizhal/release-action@v1
       with:
-        artifacts: "ஃஎண்.zip"
+        artifacts: ஃஎண்.zip
         allowUpdates: true
         commit: main
         draft: false
