--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -37,9 +37,10 @@ jobs:
       run: ls
 
     - name: நீக்கு
-      uses: Nizhal/delete-tag-and-release@v2.1
+      uses: Nizhal/delete-tag-and-release@v1.0
       with:
         tag_name: current
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         delete_release: true
 
     - name: வெளியீடு
