--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -48,6 +48,7 @@ jobs:
       with:
         artifacts: ஃஎண்.zip
         allowUpdates: true
+        replacesArtifacts: true
         commit: main
         draft: false
         tag: current
