--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -55,7 +55,7 @@ jobs:
         name: புதியவெளியீடு
         body: புதிய மாற்றங்கள் அனைத்து அடங்கும்
         token: ${{ secrets.GITHUB_TOKEN }}
-    # ரன்னர் ஷெல்லைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
+    # ரன்னர் ஒட்டைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
     - name: பல வரி படிவம்
       run: |
          echo $LANG வெற்றிகரமாக கட்டப்பட்டது 
