--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -22,7 +22,7 @@ jobs:
     # படிகள் வேலையின் ஒரு பகுதியாக செயல்படுத்தப்படும் பணிகளின் வரிசையைக் குறிக்கின்றன
     steps:
     # $GITHUB_WORKSPACE இன் கீழ் உங்கள் களஞ்சியத்தை செக்-அவுட் செய்கிறீர்கள், அதனால் உங்கள் வேலை அதை அணுக முடியும்
-    - name: எடு
+    - name: 🔧எடு
       uses: Nizhal/checkout@v3
 
     - name: கட்டு
@@ -39,7 +39,7 @@ jobs:
     - name: நீக்கு
       uses: Nizhal/delete-tag-and-release@v1.0
       with:
-        tag_name: current
+        tag_name: latest
         github_token: ${{ secrets.GITHUB_TOKEN }}
         delete_release: true
 
@@ -55,9 +55,8 @@ jobs:
         makeLatest: true
         name: புதியவெளியீடு
         prerelease: false
-        removeArtifacts: true
         replacesArtifacts: true
-        tag: current
+        tag: latest
         token: ${{ secrets.GITHUB_TOKEN }}
 
     # ரன்னர் ஒட்டைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
