--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -44,20 +44,14 @@ jobs:
         delete_release: true
 
     - name: வெளியீடு
-      uses: Nizhal/release-action@v1
+      uses: marvinpinto/action-automatic-releases@latest
       with:
-        allowUpdates: true
-        artifactErrorsFailBuild: true
-        artifacts: ஃஎண்.zip
-        body: புதிய மாற்றங்கள் அனைத்து அடங்கும்
-        commit: main
-        draft: false
-        makeLatest: true
-        name: புதியவெளியீடு
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "latest"
         prerelease: false
-        replacesArtifacts: true
-        tag: latest
-        token: ${{ secrets.GITHUB_TOKEN }}
+        title: "புதியவெளியீடு"
+        files: |
+                            ஃஎண்.zip        
 
     # ரன்னர் ஒட்டைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
     - name: பல வரி படிவம்
