--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -44,14 +44,20 @@ jobs:
         delete_release: true
 
     - name: வெளியீடு
-      uses: marvinpinto/action-automatic-releases@latest
+      uses: Nizhal/release-action@v1
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "latest"
+        allowUpdates: true
+        artifactErrorsFailBuild: true
+        artifacts: ஃஎண்.zip
+        body: புதிய மாற்றங்கள் அனைத்து அடங்கும்
+        commit: main
+        draft: false
+        makeLatest: true
+        name: புதியவெளியீடு
         prerelease: false
-        title: "புதியவெளியீடு"
-        files: |
-                            ஃஎண்.zip        
+        replacesArtifacts: true
+        tag: latest
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     # ரன்னர் ஒட்டைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
     - name: பல வரி படிவம்
