--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -37,7 +37,7 @@ jobs:
       run: ls
       
     - name: மறுகட்டு      
-    - uses: Nizhal/action-zip@v1
+      uses: Nizhal/action-zip@v1
       with:
         args: zip -qq App.zip ஃஎண்.zip
         
