--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -35,13 +35,18 @@ jobs:
     # ரன்னர் ஓட்டைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
     - name: 🚴பட்டியல்
       run: ls
+        
+     - name: 🤠பிரி      
+      uses: Nizhal/action-zip@v1
+      with:
+        args: unzip -qq ஃஎண்.zip -d ஃஎண்
       
     - name: 🤐மறுகட்டு      
       uses: Nizhal/action-zip@v1
       with:
-        args: zip -qq App.zip ஃஎண்.zip
-        
-    # ரன்னர் ஓட்டைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
+        args: zip -qq App.zip ஃஎண்
+ 
+ # ரன்னர் ஓட்டைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
     - name: 🚴பட்டியல்
       run: ls
 
