--- a/.github/workflows/கட்டுப்பணி.yml
+++ b/.github/workflows/கட்டுப்பணி.yml
@@ -39,12 +39,21 @@ jobs:
     - name: 🤠பிரி      
       uses: Nizhal/action-zip@v1
       with:
-        args: unzip -qq ஃஎண்.zip -d ஃஎண்
+        args: unzip ஃஎண்.zip -d ஃஎண்
+
+  # ரன்னர் ஒட்டைப் பயன்படுத்தி கட்டளைகளின் தொகுப்பை இயக்குகிறது
+    - name: பல வரி படிவம்
+      run: |
+         ls 
+         cd ஃஎண்
+         ls
+         cd ..
+         ls
       
     - name: 🤐மறுகட்டு      
       uses: Nizhal/action-zip@v1
       with:
-        args: zip -qq -r App.zip ஃஎண்
+        args: zip -r App.zip ஃஎண்
  
  # ரன்னர் ஓட்டைப் பயன்படுத்தி ஒற்றை கட்டளையை இயக்குகிறது
     - name: 🚴பட்டியல்
